[package]
name = "t8n"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="t8n-repl"
path="bin/repl/main.rs"

[[bin]]
name="t8n-runner"
path="bin/runner/main.rs"

[dependencies]
home = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.0.1"
clap = { version = "4.0.18", features = ["derive"] }
